--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Index</title>
-</head>
-<body>
+	<head>
+		<title>Index</title>
+		<script type="text/javascript" src="js/index.js"></script>
+		<link rel="stylesheet" href="css/styles.css">
+	</head>
+	<body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
+		<h1>This is a Heading</h1>
+		<p>This is a paragraph.</p>
+		<button type="button" onclick="helloWorld()">Click me</button>
+	
+	</body>
 </html>
