--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,19 @@
 	</head>
 	<body>
 
-		<h1>This is a Heading</h1>
-		<p>This is a paragraph.</p>
-		<button type="button" onclick="helloWorld()">Click me</button>
-	
+		<h1>Task Manager</h1>
+		
+		
 	</body>
+	<footer>
+	
+	  <p>Site Footer</p>
+	  <p>
+		Contact information: 
+		<a>
+			contact@me.com
+		</a>
+	  </p>
+	  
+	</footer>
 </html>
